--- a/databinding.html
+++ b/databinding.html
@@ -1,7 +1,8 @@
 <html lang="en">
     
     <div id="app">
-        <h1>{{ message }}</h1>
+        <a :href="url"> {{ url }}</a>
+        <h1 data="dynamicId">{{dynamicId}}</h1>
     </div> 
     
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -9,7 +10,8 @@
         new Vue({
             el: '#app',
             data: {
-                message: 'Hello'
+                dynamicId: 30,
+                url: 'https://madsoftworks.com'
             }
         })
     </script>    
