inline style binding

--- a/databinding.html
+++ b/databinding.html
@@ -13,5 +13,6 @@
                 dynamicId: 30,
                 url: 'https://madsoftworks.com'
             }
-        })
+        });
     </script>    
+</html>
