--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-        new Vue({
+        let vm = new Vue({
             el: '#app',
             data: {
                 message: 'Hello'
